--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ tasks.withType(JavaCompile).configureEach {
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release.set(targetJavaVersion)
     }
+
+    options.compilerArgs << "-Xlint:deprecation"  // Show deprecation warnings in detail
+    options.compilerArgs << "-Xlint:unchecked"    // Show unchecked operation warnings in detail
 }
 
 processResources {
